Link all the button to whatsapp

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                       <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.12_1a6b17e3.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
                           <h4 class="card-title">Detol Soap</h4>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <button class="btn btn-warning" type="button">Buy</button>
+                          <p class="card-text"> </p>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>
@@ -101,8 +101,8 @@
                       <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
                           <h4 class="card-title">Pampers</h4>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <button class="btn btn-warning" type="button">Buy</button>
+                          <p class="card-text"> </p>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>  
@@ -111,8 +111,8 @@
                       <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
                           <h4 class="card-title">Keyboard</h4>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <button class="btn btn-warning" type="button">Buy</button>
+                          <p class="card-text"> </p>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>   
@@ -121,8 +121,8 @@
                       <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.21_d50d448f.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
                           <h4 class="card-title">Detol Handwash</h4>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <button class="btn btn-warning" type="button">Buy</button>
+                          <p class="card-text"> </p>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div> 
@@ -138,8 +138,8 @@
                       <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
                           <h4 class="card-title">Freedom Oil</h4>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <button class="btn btn-warning" type="button">Buy</button>
+                          <p class="card-text"> </p>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>
@@ -148,8 +148,8 @@
                       <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.20_5c013741.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
                           <h4 class="card-title">Cpu Cabinet</h4>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <button class="btn btn-warning" type="button">Buy</button>
+                          <p class="card-text"> </p>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>  
@@ -158,8 +158,8 @@
                       <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.22_9c3d2dce.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
                           <h4 class="card-title">Pampers</h4>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <button class="btn btn-warning" type="button">Buy</button>
+                          <p class="card-text"> </p>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>   
@@ -168,8 +168,8 @@
                       <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.14_d144d3b4.jpg" class="img-fluid" alt="card1">
                         <div class="card-body">
                           <h4 class="card-title">Keyboard</h4>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <button class="btn btn-warning" type="button">Buy</button>
+                          <p class="card-text"> </p>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>                  
@@ -212,7 +212,7 @@
           <div class="card-body cd-txt">
             <h4 class="card-title">Dell Inspiron</h4>
             <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
-            <a href="#" class="btn btn-warning bb-btn">Buy</a>
+            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
         <div class="card col-sm-4 col-lg-2 card2sty">
@@ -220,7 +220,7 @@
           <div class="card-body cd-txt">
             <h4 class="card-title">Acer</h4>
             <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
-            <a href="#" class="btn btn-warning bb-btn">Buy</a>
+           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
         <div class="card col-sm-4 col-lg-2 card2sty">
@@ -228,7 +228,7 @@
           <div class="card-body cd-txt">
             <h4 class="card-title">Apple MAC</h4>
             <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
-            <a href="#" class="btn btn-warning bb-btn">Buy</a>
+           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
         <div class="card col-sm-4 col-lg-2 card2sty">
@@ -236,7 +236,7 @@
           <div class="card-body cd-txt">
             <h4 class="card-title">Hp Pavilion</h4>
             <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
-            <a href="#" class="btn btn-warning bb-btn">Buy</a>
+           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
         <div class="card col-sm-4 col-lg-2 card2sty">
@@ -244,7 +244,7 @@
           <div class="card-body cd-txt">
             <h4 class="card-title">Lenovo Ideapad</h4>
             <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
-            <a href="#" class="btn btn-warning bb-btn">Buy</a>
+           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
         <div class="card col-sm-4 col-lg-2 card2sty">
@@ -252,7 +252,7 @@
           <div class="card-body cd-txt">
             <h4 class="card-title">Asus VivoBook</h4>
             <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
-            <a href="#" class="btn btn-warning bb-btn">Buy</a>
+           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
       </div>
