Change button and footer style

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!------------------------------------------------------Carousel---------------------------------------------------->
 
 <!------------------------------------------------------Cards---------------------------------------------------->
-<div class="container-fluid pt-2 pb-2" style="background-color:#F0FFFF; border-bottom:1px solid darkgray;">
+<div class="container-fluid pt-2pb-2" style="background-color:#F0FFFF; border-bottom:1px solid darkgray;">
   <div class="row">
     <div class="col-sm-12">
       <div id="inm" class="carousel slide" data-ride="carousel">
@@ -92,7 +92,7 @@
                         <div class="card-body">
                           <h4 class="card-title">Detol Soap</h4>
                           <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>
@@ -102,7 +102,7 @@
                         <div class="card-body">
                           <h4 class="card-title">Pampers</h4>
                           <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>  
@@ -112,7 +112,7 @@
                         <div class="card-body">
                           <h4 class="card-title">Keyboard</h4>
                           <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>   
@@ -122,7 +122,7 @@
                         <div class="card-body">
                           <h4 class="card-title">Detol Handwash</h4>
                           <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div> 
@@ -139,7 +139,7 @@
                         <div class="card-body">
                           <h4 class="card-title">Freedom Oil</h4>
                           <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>
@@ -149,7 +149,7 @@
                         <div class="card-body">
                           <h4 class="card-title">Cpu Cabinet</h4>
                           <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>  
@@ -159,7 +159,7 @@
                         <div class="card-body">
                           <h4 class="card-title">Pampers</h4>
                           <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>   
@@ -169,7 +169,7 @@
                         <div class="card-body">
                           <h4 class="card-title">Keyboard</h4>
                           <p class="card-text"> </p>
-                          <a href="https://wa.link/labfw2"><button class="btn btn-warning" type="button">Buy</button></a>
+                          <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
                         </div>
                     </div>
                   </div>                  
@@ -211,7 +211,7 @@
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap1" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title">Dell Inspiron</h4>
-            <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
+            <p class="card-text txt-sz"></p>
             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
@@ -219,7 +219,7 @@
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap2" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title">Acer</h4>
-            <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
+            <p class="card-text txt-sz"></p>
            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
@@ -227,15 +227,15 @@
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap3" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title">Apple MAC</h4>
-            <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
+            <p class="card-text txt-sz"></p>
            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
         <div class="card col-sm-4 col-lg-2 card2sty">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap4" class="image-fluid">
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; max-height:200px; max-width:200px;" alt="lap4" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title">Hp Pavilion</h4>
-            <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
+            <p class="card-text txt-sz"></p>
            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
@@ -243,7 +243,7 @@
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap5" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title">Lenovo Ideapad</h4>
-            <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
+            <p class="card-text txt-sz"></p>
            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
@@ -251,7 +251,7 @@
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_a212a797.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap2" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title">Asus VivoBook</h4>
-            <p class="card-text txt-sz">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil.</p>
+            <p class="card-text txt-sz"></p>
            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn">Buy</a>
           </div>
         </div>
