Change the degin of latest collation

--- a/index.html
+++ b/index.html
@@ -207,44 +207,44 @@
     <div class="col-sm-12 ">
       <h4 class="cd-h4 mt-3 mb-3">Our Latest Collections</h4>
       <div class="card-group">
-        <div class="card col-sm-4 col-lg-2 card2sty" >
+        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%; margin-left: 5%;">
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; max-height:200px; max-width:200px; ;" alt="lap1" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title cd-title">Dell Inspiron</h4>
             <p class="card-text txt-sz"></p>
-            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" >Buy</a>
+            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" >
+        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap2" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title cd-title">Acer</h4>
             <p class="card-text txt-sz"></p>
-           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" >Buy</a>
+           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" >
+        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap3" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title cd-title">Apple MAC</h4>
             <p class="card-text txt-sz"></p>
-           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" >Buy</a>
+           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" >
+        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; max-height:200px; max-width:200px; " alt="lap4" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title cd-title">Hp Pavilion</h4>
             <p class="card-text txt-sz"></p>
-           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" >Buy</a>
+           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" >
+        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
           <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap5" class="image-fluid">
           <div class="card-body cd-txt">
             <h4 class="card-title cd-title">Lenovo Ideapad</h4>
             <p class="card-text txt-sz"></p>
-           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" >Buy</a>
+           <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
         </div>
        
