create a new pagename plam flowers

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!------------------------------------------------------Header---------------------------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light bg-white" style="max-height:70px;z-index:10;">
-        <a class="navbar-brand" href="#"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;">Hopeshore</span></a>
+        <a class="navbar-brand" href="index.html"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;">Hopeshore</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navdp" aria-controls="navdp" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +30,7 @@
       </nav>
       <nav class="nav2">
         <ul class="ul2">
-            <li id="one"><a href="electronics.html">Palm Flowers</a></li>
+            <li id="one"><a href="Palm Flowers.html">Palm Flowers</a></li>
             <li id="two"><a href="mobiles.html">Graden Flowers</a></li>
             <li id="three"><a href="laptops.html">Sticks</a></li>
             <li id="four"><a href="#">Wall Hanging</a></li>
